GL/ol-bar-col-ter/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gl2-2022-bar-col-ter
  namespace: deploy-simulife-gl2-2022
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gl2-2022-bar-col-ter
  template:
    metadata:
      labels:
        app: gl2-2022-bar-col-ter
    spec:
      imagePullSecrets:
        - name: "registry-gitlab-hefr-read"
      containers:
        - image: registry.forge.hefr.ch/genie-logiciel-2/2022-2023/simulife-servers/simulife-api-bar-col-ter:${TAG}
          imagePullPolicy: Always
          name: gl2-2022-bar-col-ter
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.3"
            limits:
              memory: "128Mi"
              cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
  name: gl2-2022-bar-col-ter-svc
  namespace: deploy-simulife-gl2-2022
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: gl2-2022-bar-col-ter
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gl2-2022-bar-col-ter-http
  namespace: deploy-simulife-gl2-2022
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gl2-2022-bar-col-ter.kube.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gl2-2022-bar-col-ter-svc
                port:
                  number: 80
